fix: improve button spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -550,6 +550,10 @@ mode from @SlRvb, which fall under the same license (MIT license, @kometenstaub 
 			display: none;
 		}
 
+		.restore {
+			margin-right: 1em;
+		}
+
 		/* for textarea that displays plain text version */
 
 		textarea.plain-text-area {
